@@ -1,0 +1,12 @@
+<?php
+/** Luba-Lulua (ciluba)
+ *
+ * @file
+ * @ingroup Languages
+ *
+ * @author Amir E. Aharoni
+ */
+
+$fallback = 'fr';
+
+$namespaceGenderAliases = [];
