@@ -241,6 +241,7 @@ because of Phabricator reports.
 * (T354937, T369899) Added language support for Minnan (Tâi-lô)
   (nan-latn-tailo).
 * (T375052) Added language support for Tigre (tig).
+* (T375999) Added language support for Luba-Lulua (lua).
 * …
 
 === Breaking changes in 1.43 ===
